--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>
-        Document
-    </title>
-    <script src="scripts/main.js"></script>
-</head>
-<body>
-    <h2>Speech to Text Laboratory</h2>
-    <audio id="player"  controls></audio>
-    <button id="recordStart"> Record </button>
-    <button id="recordStop" > Stop   </button>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>
+            Speech Text Laboratory
+        </title>
+        <script src="scripts/main.js"></script>
+    </head>
+    <body>
+        <h2>Speech to Text Laboratory</h2>
+        <audio id="player"  controls></audio>
+        <button id="recordStart"> Record </button>
+        <button id="recordStop" > Stop   </button>
+    </body>
 </html>
