--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,9 @@
     <body>
         <h2>Speech to Text Laboratory</h2>
         <audio id="player"  controls></audio>
-        <button id="recordStart"> Record </button>
-        <button id="recordStop" > Stop   </button>
+        <div>
+            <button id="recordStart"> Record </button>
+            <button id="recordStop" > Stop   </button>
+        </div>
     </body>
 </html>
